# ai-patent-factory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP.md  pyproject.toml  sitecustomize.py
.claude/commands/: audit.md  checkpoint.md  draft.md  ideate.md  research.md  review.md  setup.md  shortlist.md
.codex/: README.md
assets/mascot/: generate_mascot.py
config/: calibration-trust-v1.0.0.json  defaults.json  report-en-v1.0.0.json  report-v1.0.0.json  simrisk-v1.0.0.json
docs/: decision-contract.md  g009-scope-addendum.md  ideation-contract.md  kipris-contract-spike.md  report-contract.md  serpapi-google-patents-contract.md  simrisk-v1.md  us016-per-field-citation-migration.md
documents/: README.md
examples/justin/: README.md  background.md  expected-report-en.md  live-sample-report-en.md  web-rows.json
examples/redacted/: interview.json
patent_factory/: __init__.py
schemas/: audit.schema.json  calibration-manifest.schema.json  calibration-trust.schema.json  candidate.schema.json  decision.schema.json  feature-map.schema.json  finalist.schema.json  report.schema.json  review.schema.json  validation.schema.json
scripts/: calibration_check.py  check_credentials.py  check_serpapi_quota.py  live_kipris_smoke.py  record_fixtures.py  release_verify.py  validate_run.py
src/patent_factory/: __init__.py  artifacts.py  audit.py  cli.py  config.py  corpus.py  database.py  decisions.py  evaluation.py  ideation.py  lint.py  models.py  paths.py  privacy.py  profile.py  provenance.py  (+10 more)
templates/: report-en.md  report-ko.md
workspace/: README.md
(+86 files in other folders)
