[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-patent-proposal-factory"
version = "0.1.0"
description = "Local, deterministic Korean invention-profile workflow"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
patent-factory = "patent_factory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
